# CodeForces

./: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: test.yml
downloader/: __main__.py  downloader.py
downloader/templates/: problem.txt  test.txt
problems/P_282A/: solution_282A.py
problems/P_4A/: solution_4A.py  test_solution_4A.py
problems/P_617A/: solution_617A.py
problems/_1/: _1_A_theatre_square.py  _1_A_theatre_square_test.py
problems/_112/: _112_A_petya_and_strings.py
problems/_118/: _118_A_string_task.py
problems/_231/: _231_A_team.py
problems/_281/: _281_A_word_capitalization.py  _281_A_word_capitalization_test.py
problems/_4/: _4_A_watermelon.py  _4_A_watermelon_test.py
problems/_50/: _50_A_domino_piling.py
problems/_519/: _519_B_a_and_b_and_compilation_errors.py  _519_B_a_and_b_and_compilation_errors_test.py
problems/_69/: _69_A_young_physicist.py  _69_A_young_physicist_test.py
problems/_71/: _71_A_way_too_long_words.py  _71_A_way_too_long_words_test.py
solutions/S_109A/: solution_109A.py  test_solution_109A.py
solutions/S_1117B/: solution_1117B.py  test_solution_1117B.py
solutions/S_112A/: solution_112A.py  test_solution_112A.py
solutions/S_158B/: solution_158B.py  test_solution_158B.py
solutions/S_270A/: solution_270A.py  test_solution_270A.py
solutions/S_281A/: solution_281A.py  test_solution_281A.py
solutions/S_282A/: test_solution_282A.py
templates/: download_problem.py  template_solution.txt  template_test.txt
test/: utils.py
(+45 files in other folders)
