[tool.poetry]
name = "CodeForces"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
Mako = "^1.1.2"
requests = "^2.23.0"
beautifulsoup4 = "^4.9.1"
coverage = "^5.1"
black = "^19.10b0"
flake8 = "^3.8.1"

[tool.black]
line-length = 79

[tool.coverage.run]
omit = ["**test**","**__init__*"]
